[gd_scene load_steps=7 format=3 uid="uid://b3vvy3yoajmuo"]

[ext_resource type="Script" path="res://interface/shop_buttons/intellect_button.gd" id="2_3rrwv"]
[ext_resource type="Texture2D" uid="uid://drs47o0okpe8h" path="res://assets/art/sprites/Smart_1hover.png" id="2_u2y3q"]
[ext_resource type="Texture2D" uid="uid://c5ph2x5p8c0up" path="res://assets/art/sprites/Banana.png" id="3_3aas3"]
[ext_resource type="Texture2D" uid="uid://cvqk0mp716rw" path="res://assets/art/sprites/Smart_1.png" id="3_l6mi0"]
[ext_resource type="AudioStream" uid="uid://cvbidksdgxmdj" path="res://assets/sfx/buy_sound.wav" id="4_it5s3"]
[ext_resource type="Texture2D" uid="uid://cmn2pspnvd47t" path="res://assets/art/sprites/tooltip3.png" id="6_1y7xq"]

[node name="IntellectButton" type="TextureButton"]
offset_left = -16.0
offset_top = -203.0
offset_right = 16.0
offset_bottom = -171.0
texture_normal = ExtResource("3_l6mi0")
texture_hover = ExtResource("2_u2y3q")
script = ExtResource("2_3rrwv")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 172.0
offset_right = 55.0
offset_bottom = 220.0
texture = ExtResource("3_3aas3")

[node name="Price" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -51.0
offset_top = 185.0
offset_right = -21.0
offset_bottom = 201.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
text = "500"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Description" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -61.0
offset_right = 68.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Intellect 1"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="BuySFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_it5s3")

[node name="ShortDescription" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -33.0
offset_right = 20.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
text = "Thesaurus"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LongDescription" type="Label" parent="."]
layout_mode = 0
offset_left = -48.0
offset_top = 37.0
offset_right = 84.0
offset_bottom = 144.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
text = "Sure, the monkeys don't know how to read, but maybe the placebo effect of giving them a comprehensive thesaurus will make their incompetent scrawling appear more coherent.

2x word chance"
autowrap_mode = 3

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="TextureRect2" type="TextureRect" parent="."]
visible = false
offset_left = 18.0
offset_top = 23.0
offset_right = 67.0
offset_bottom = 69.0
texture = ExtResource("6_1y7xq")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
